--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,11 @@ kernel/configs/android-*.cfg
 #Ignoring Android.bp link file
 #
 Android.bp
+# gulch
+buildproton.sh
+out
+*.sh
+*.py
+*.log
+*.txt
+
